--- a/backend/springcome/src/main/resources/application.yml
+++ b/backend/springcome/src/main/resources/application.yml
@@ -28,7 +28,16 @@ spring:
    config:
       activate:
          on-profile: dev
-      
+
+   # datasource
+   datasource:
+      username: spring
+      password: spring
+      driver-class-name: org.mariadb.jdbc.Driver
+      url: jdbc:mysql://34.64.73.89:3306/spring?characterEncoding=utf8
+      hikari:
+         minimum-idle: 100
+         maximum-pool-size: 200    
   
 
 ---
@@ -53,7 +62,7 @@ spring:
 
 # server
 server:
-   port: 8888
+   port: 7777
    servlet:
      context-path: /
      encoding:
@@ -64,5 +73,16 @@ server:
         force-response: false
 
 ---
+
+# mybatis
+mybatis:
+   config-location: classpath:mybatis/configuration.xml
+
+
+---
+
+# logging
+logging:
+   config: classpath:logback.xml
 
 
