--- a/backend/springcome/src/main/resources/_application.properties
+++ b/backend/springcome/src/main/resources/_application.properties
@@ -1,5 +1,6 @@
+
 # server
-server.port=8888
+server.port=8080
 server.servlet.context-path=/mysite06
 
 # devtools
@@ -17,7 +18,7 @@ spring.http.encoding.forced-request=false
 spring.http.encoding.forced-response=false
 
 # datasource
-spring.datasource.driver-Class-Name=org.mariadb.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/webdb?characterEncoding=utf8
 spring.datasource.username=webdb
 spring.datasource.password=webdb
@@ -27,21 +28,19 @@ spring.datasource.maxActive=20
 # mybatis
 mybatis.config-location=classpath:mybatis/configuration.xml
 
-
 # message resource(Internationalization)
-spring.message.always-message-format=true
-spring.message.basename=messages/messages_ko
-spring.message.encoding=utf-8
+spring.messages.always-message-format=true
+spring.messages.basename=messages/messages_ko
+spring.messages.encoding=utf-8
 
 # multipart
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
-# aop(@EnbleAspectJAutoProxy)
+# aop(@EnableAspectJAutoProxy)
 spring.aop.auto=true
 spring.aop.proxy-target-class=true
 
 # logging
 logging.config=classpath:logback.xml
-
