--- a/springcome-frontend/.gitignore
+++ b/springcome-frontend/.gitignore
@@ -1,2 +1,16 @@
-.idea
-node_modules
+**/node_modules
+**/public/assets
+**/public/bundle.js
+**/public/main.js
+
+
+**/.classpath
+**/.project
+**/.settings
+**/target
+
+**/.idea
+**/.iml
+**/build
+**/dist
+**/DS_Store
