--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,10 @@
   },
   "dependencies": {
     "react": "^17.0.2",
+    "react-addons-update": "^15.6.3",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2"
   }
