창현 21/12/17 ~ 초대 이메일 보내기

--- a/backend/springcome/src/main/resources/application.yml
+++ b/backend/springcome/src/main/resources/application.yml
@@ -78,3 +78,6 @@ server:
 mybatis:
    config-location: classpath:mybatis/configuration.xml
 
+# logging
+logging:
+   config: classpath:logback.xml 
