캘린더 완성, 프로필 완성 2021_12_21

--- a/backend/springcome/src/main/resources/application.yml
+++ b/backend/springcome/src/main/resources/application.yml
@@ -32,10 +32,10 @@ spring:
       
    # datasource
    datasource:
-      username: root
-      password: root
+      username: spring
+      password: spring
       driver-class-name: org.mariadb.jdbc.Driver
-      url: jdbc:mysql://127.0.0.1:3306/teamproject?characterEncoding=utf8
+      url: jdbc:mysql://34.64.73.89:3306/spring?characterEncoding=utf8
       hikari:
          minimum-idle: 10
          maximum-pool-size: 20
