--- a/backend/springcome/pom.xml
+++ b/backend/springcome/pom.xml
@@ -140,6 +140,15 @@
 			<version>2.2</version>
 		</dependency>
 	</dependencies>
+	
+		<!-- JSON PARSER -->
+	<dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1</version>
+        </dependency>
+
+
 
 	<build>
 		<finalName>springcome</finalName>
