--- a/backend/springcome/src/main/resources/application.yml
+++ b/backend/springcome/src/main/resources/application.yml
@@ -19,7 +19,12 @@ spring:
          prefix: /WEB-INF/views/
          suffix: .jsp
 
-
+   # multipart
+   servlet:
+      multipart:
+         enabled: true
+         max-file-size: 50MB
+         max-request-size: 50MB
 
 ---
 
