--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,9 @@
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
     "react-router": "^6.0.2",
-    "react-router-dom": "^6.0.2"
+    "react-router-dom": "^6.0.2",
+    "react-stomp": "^5.1.0",
+    "sockjs-client": "^1.5.2",
+    "stompjs": "^2.3.3"
   }
 }
