--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
+    "base-64": "^1.0.0",
+    "file-saver": "^2.0.5",
     "react": "^17.0.2",
     "react-addons-update": "^15.6.3",
     "react-beautiful-dnd": "^13.1.0",
